--- a/find_hotel/css/style.css
+++ b/find_hotel/css/style.css
@@ -77,8 +77,6 @@ li{
 
 
 }
-.icons {
-}
 
 
 
@@ -154,3 +152,119 @@ p{
     margin-left: 290px;
 }
 input{font-size: 16px;}
+
+
+/*---------------------------------------*/
+
+.why_page_main {
+    background: #f7f7f7;
+    margin-top: 135px;
+}
+
+
+
+.wyh_main_title {
+    font-size: 40px;
+    font-weight: 600;
+    margin: 0px 423px 0 423px;
+    padding-top: 70px;
+}
+
+.why_main_text {
+    font-size: 20px;
+    font-weight: 400;
+    margin: 26px 300px 0px 300px;
+    text-align: center;
+}
+
+.wht_page_list {
+    margin-top: 54px;
+    margin-bottom: 70px;
+}
+
+.why_page_content {
+    display: flex;
+    justify-content: space-between;
+    
+}
+
+.why_info {
+    width: 270px;
+    text-align: center;
+    font-weight: 400;
+}
+
+.why_info h3{
+    font-size: 20px;
+    font-weight: 600px;
+
+}
+/*------------------------------------*/
+
+.offer_page__conteiner {}
+
+.offer_page_content {}
+
+.offer_page_title {
+    margin-top: 100px;
+    font-size: 40px;
+    font-weight: 600;
+    margin: 100px 500px 0 500px;
+    width: 277px;
+}
+
+.hotel_offer {
+    margin-top: 60px;
+}
+
+
+.hotel_list {
+    display: flex;
+    justify-content: space-between;
+}
+
+.hotel {
+    border-width: 2px;
+    border-color:rgb(231, 230, 235);
+    border-style:solid;
+    border-radius :10px;
+    padding: 5px;
+    
+}
+
+.hotel h3{
+    font-size: 22px;
+    font-weight: 500;
+}
+
+.dec {
+    color: rgb(133, 133, 133);
+}
+
+.date {
+    
+}
+
+.price {
+    color: var(--color_blue);
+    font-size: 30px;
+    font-weight: 500;
+}
+.price span{
+    font-size: 18px;
+    font-weight: 400;
+}
+
+.icon_decript {
+    display: flex;
+    justify-content: space-between;
+}
+
+.icon_list_decript {
+    display: flex;
+    justify-content: space-between;
+}
+.icon_list_decript p{
+    margin-left: 10px;
+    color: rgb(133, 133, 133);
+}
